# futuristic-original-useful-recreation

./: .gitignore  planning.md  readme.md
Rapports Saveria/: Séance3.md
game/: CMakeLists.txt  array.hpp  board.cpp  board.hpp  game.ino  initializer_list.hpp
game/include/: array.hpp  board.hpp  utils.hpp
game/src/: board.cpp  main.cpp  utils.cpp
reports/: Rapport de projet
reports/Logan/: session2.md  session3.md  session4.md  session5.md  session6.md  session7.md
reports/Saveria/: IMG_1673.HEIC  Séance4.md  Séance4.txt  Séance 7  Séance5.md  Séance6.md  Séance7.md  Séance8.md
